Network/network-private.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jx-custom-policy-app
spec:
  podSelector:
    matchLabels:
      app: api
  policyTypes:
  - Egress
  - Ingress
  egress:
    - to:
      - ipBlock:
          cidr: 0.0.0.0/0
          except:
          - 192.168.163.0/16
  ingress:
    - from:
      - ipBlock:
          cidr: 0.0.0.0/0
          except:
          - 192.168.163.0/16
